--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,20 @@ before_install:
 - cp /usr/lib/python2.7/dist-packages/fontforge.* "$HOME/virtualenv/python2.7.8/lib/python2.7/site-packages"
 install:
 - pip install git+https://github.com/behdad/fontTools.git
+- pip install git+https://github.com/googlefonts/fontcrunch.git
 - pip install git+https://github.com/googlefonts/fontbakery-cli.git
 - pip install jinja2
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py .
+before_script:
+- mkdir -p builds/build
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery.py . | tee builds/build/build.log
 branches:
   only:
   - master
 after_script:
-- rm -rf builds/build/sources builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH bakery-report.py builds/build
+- rm -rf builds/build/sources
+- rm -rf builds/build/build.state.yaml
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH travis-deploy.py
 env:
   global:
-    secure: h9v4Tuc+kmGmVCKjG82QCIE5H8T7amEsTn4sEBcbY8JO8E77LHMy8M6IIdDm9QUnD0i5bgBZutk8+5QVK8ct45gzdngdINVBR2F6pz4Do276s1hBXevIzzWBVhKYMZEc1FL6TA/wBdIL1TwbDnHlKT7WPYl91UnnKrxDcsVO2Kc=
+    secure: gf8r1aGrGS/TyDj90BGvZI6pXCKyj1VTJVHIggSAIeZLyZGuD5H7hMCRPr4yN3qmZOXJIlz15kTGgNRbJSYPfGMslH2SBZaDnVIVHTLtM4MsinsAxSWjCTU8Vj/6a+dwVnYbv4fuV05KvYJYOryclZ/W0B4eD50A5UOQSPagFRI=
